fix spacing in activity library and update tests (#9572)

--- a/services/QuillLMS/app/assets/stylesheets/pages/custom_activity_pack/activity_row.scss
+++ b/services/QuillLMS/app/assets/stylesheets/pages/custom_activity_pack/activity_row.scss
@@ -26,14 +26,18 @@
           margin-right: 16px;
           margin-top: 2px;
         }
+        .quill-tooltip-trigger {
+          white-space: normal;
+          width: 100%;
+        }
       }
       .buttons-wrapper {
         display: flex;
         .non-toggle-buttons {
           display: flex;
-          .interactive-wrapper {
-            height: min-content;
-          }
+        }
+        .interactive-wrapper {
+          height: min-content;
         }
       }
       .preview-link, .remove-button {
@@ -156,10 +160,14 @@
       img {
         margin-top: 3px;
       }
-      .grade-range {
-        width: 58px;
-        margin-right: 16px;
-        display: inline-block;
+      .grade-range-and-label {
+        display: flex;
+        .grade-range {
+          width: 64px;
+          margin-right: 16px;
+          display: inline-block;
+          white-space: nowrap;
+        }
       }
     }
     &.not-selected:hover {
@@ -262,7 +270,7 @@
         }
       }
       .grade-range {
-        margin: 8px 0px;
+        margin: 0px 0px 8px;
       }
       .non-toggle-buttons {
         .interactive-wrapper {
